--- a/css/style.css
+++ b/css/style.css
@@ -810,10 +810,10 @@ button:hover {
   height: 100%;
 }
 
-.fadeInUp_animation {
+/* .fadeInUp_animation {
   opacity: 1;
   transform: translate3d(0px, 0px, 0px);
-}
+} */
 /* Blog */
 .blog__allin .blog__title {
   p {
